fix layout issues

--- a/css/320px.css
+++ b/css/320px.css
@@ -10,6 +10,7 @@
   .website-title {
     text-align: center;
     padding-bottom: 7%;
+    flex-direction: column;
   }
 
   .featured-work-title {
