--- a/css/966px.css
+++ b/css/966px.css
@@ -2,9 +2,9 @@
 
   .website-title {
     /* text-align: left; */
-    width: 100%;
-    display: inline-block;
-    float: right;
+    /* width: 100%; */
+    display: flex;
+    /* float: right; */
   }
 
   h3 {
