--- a/css/main.css
+++ b/css/main.css
@@ -35,11 +35,15 @@ img {
   border-radius: 50%;
 }
 
+.website-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .website-title__photo-me {
   border-radius: 20%;
-  padding: 20px;
-  float: right;
-  margin-top: -200px;
+  padding-top: 20px;
 }
 
 .featured-title {
